новая модель dense_att

--- a/test3.ipynb
+++ b/test3.ipynb
@@ -10,13 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.7.4 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "a474bbcb62d5bd69b7c712fe2a75db8c753fe212225b6956b600dd32d27fa289"
   }
  },
  "nbformat": 4,
@@ -24,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.00232 -0.0\n"
+      "130.08435489609838 -0.3497442\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\n",
-    "            \"datas/EURUSD_H1 copy 3.csv\",\n",
+    "            \"datas/EURUSD_H1 copy.csv\",\n",
     "            sep=\"\\t\",\n",
     "            header=0,\n",
     "            dtype={\n",
@@ -169,7 +171,7 @@
     "        )\n",
     "std = (np.array(df['open'][1:])-np.array(df['open'][:-1])).std()\n",
     "mean = (np.array(df['open'][1:])-np.array(df['open'][:-1])).mean()\n",
-    "print(round(std*2,5), round(mean*2,7))\n"
+    "print(std*100000, round(mean*100000,7))\n"
    ]
   },
   {
