--- a/test3.ipynb
+++ b/test3.ipynb
@@ -10,13 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python38364bitdd669fdbc79d4481b7189c2d79c64192",
+   "display_name": "Python 3.8.3 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "ae7f53e8dd80b02e0612f72962c8cfdaf11ca92c079bdaddd1482a56edc14533"
+   }
   }
  },
  "nbformat": 4,
@@ -37,6 +41,14 @@
     "from  models import esum2, esum\n",
     "import random"
    ]
+  },
+  {
+   "source": [
+    "$$\\sum (x^2+y^2)=10$$\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -75,6 +87,13 @@
     ")\n",
     "print(type(predictor.model))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
