server train_timer bug fixed, mql5 files refactor

--- a/test/tests2.ipynb
+++ b/test/tests2.ipynb
@@ -2,33 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1604"
+       "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "import forex_python as fp\n",
-    "\n",
-    "start_date = datetime(2020, 10, 18)  \n",
-    "end_date = datetime(2021, 10, 18) \n",
-    "# get_rate(\"EUR\", \"USD\", t)\n",
-    "\n",
-    "fp.\n",
-    "# CurrencyRates.get_previous_price_list('INR', start_date, end_date)\n",
-    "# Plot the close price of the AAPL\n",
-    "# data['Adj Close'].plot()\n",
-    "# plt.show()\n"
+    "from mt5linux import MetaTrader5\n",
+    "# connecto to the server\n",
+    "mt5 = MetaTrader5(\n",
+    "    # host = 'localhost' (default)\n",
+    "    port = 1949\n",
+    ")\n",
+    "# use as you learned from: https://www.mql5.com/en/docs/integration/python_metatrader5/\n",
+    "mt5.initialize()\n",
+    "mt5.terminal_info()\n",
+    "mt5.copy_rates_from_pos('VALE3', mt5.TIMEFRAME_M1, 0, 1000)\n",
+    "# ...\n",
+    "# don't forget to shutdown\n",
+    "mt5.shutdown()\n"
    ]
   },
   {
