--- a/test/test4.ipynb
+++ b/test/test4.ipynb
@@ -1,59 +1,49 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit"
-  },
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(16,), dtype=float64, numpy=\n",
+       "array([12.44572842, -1.4671513 ,  1.11915102,  3.97395516, -0.47949095,\n",
+       "        1.8693353 ,  0.80340229, -0.42496952, -0.19779324, -3.05811889,\n",
+       "       -0.7872147 , -0.13967748,  0.15165718, -1.37268262, -1.3585825 ,\n",
+       "        0.20922853])>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
+    "os.environ[\"ENV TF_ENABLE_ONEDNN_OPTS\"] = \"1\"\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import *\n",
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "sample_width = 1\n",
-    "input_width = 8\n",
-    "sections = int(math.log2(input_width))\n",
-    "n = sections + 1\n",
-    "# x1 = np.tile(np.random.random(input_width*4).reshape(8),(4,1)).astype(\"float32\").round(3)\n",
-    "x1 = np.random.random(input_width*4).reshape(4,input_width).astype(\"float32\").round(3)"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "\n",
+    "f_dct = lambda x: tf.signal.dct(x, n=16)\n",
+    "x = np.random.rand(32)\n",
+    "y = f_dct(x)\n",
+    "y"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "x2 = [Lambda(lambda z: z[0][:, -(2 ** z[1]) :])((x1, i)) for i in range(n)]\n",
-    "x3 = [Lambda(lambda z: z[:, -(2 ** i) :])(x1) for i in range(n)]\n",
-    "print(x2, x3)\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\n",
@@ -79,27 +69,25 @@
        "       dtype=float32)>]"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "x2 = [Lambda(lambda z: z[0][:, -(2 ** z[1]) :])((x1, i)) for i in range(n)]\n",
+    "x3 = [Lambda(lambda z: z[:, -(2 ** i) :])(x1) for i in range(n)]\n",
+    "print(x2, x3)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "# moments = [Lambda(lambda z: tf.nn.moments(z, axes=[1], keepdims=False)[1])(x2[i]) for i in range(n)]\n",
-    "means = [Lambda(lambda z: tf.math.reduce_mean(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
-    "stds = [Lambda(lambda z: tf.math.reduce_std(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
-    "R = [Lambda(lambda z: tf.math.reduce_max(z,1, keepdims=True)-tf.math.reduce_min(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
-    "print(R)\n",
-    "Concatenate(1)(means)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\n",
       "array([[0.],\n",
@@ -121,7 +109,6 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
@@ -131,15 +118,25 @@
        "       [0.975     , 0.51850003, 0.48575002, 0.444875  ]], dtype=float32)>"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# moments = [Lambda(lambda z: tf.nn.moments(z, axes=[1], keepdims=False)[1])(x2[i]) for i in range(n)]\n",
+    "means = [Lambda(lambda z: tf.math.reduce_mean(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "stds = [Lambda(lambda z: tf.math.reduce_std(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "R = [Lambda(lambda z: tf.math.reduce_max(z,1, keepdims=True)-tf.math.reduce_min(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "print(R)\n",
+    "Concatenate(1)(means)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -149,20 +146,14 @@
     "x = tf.tile(x,[1,3,1])\n",
     "x = tf.subtract(x, c)\n",
     "x = tf.multiply(x, x)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "x = -tf.reduce_sum(x, 2)\n",
-    "x"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
@@ -170,18 +161,46 @@
        "       [-86., -86., -86.]], dtype=float32)>"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "x = -tf.reduce_sum(x, 2)\n",
+    "x"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.9 64-bit",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
