train.ipynb +red, predictor - reload dataset

--- a/train.ipynb
+++ b/train.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sys\n",
     "import math\n",
@@ -250,154 +252,73 @@
     "        clipped_y_true = tf.clip_by_value(y_true, self.value_min, self.value_max)\n",
     "        return losses.mean_absolute_error(clipped_y_true, clipped_y_pred)\n",
     "\n",
-    "def dense_att(input_width,out_width,columns_count=4,lr=1e-3,min_v=-1,max_v=1,training=True,name=\"dense-att\"):\n",
-    "    if training:\n",
-    "        dropout = 1 / columns_count\n",
-    "    else:\n",
-    "        dropout = 0\n",
-    "\n",
-    "    init_scale = 2 ** 10\n",
-    "    kernel_init = keras.initializers.RandomUniform(-init_scale, init_scale)\n",
-    "    # l2 = keras.regularizers.l2(1e-10)\n",
-    "    f_std = lambda z: tf.math.reduce_std(z, 1, keepdims=True)\n",
-    "    f_mean = lambda z: tf.math.reduce_mean(z, 1, keepdims=True)\n",
-    "    f_vrange = lambda z: (\n",
-    "        tf.math.reduce_max(z, 1, keepdims=True)\n",
-    "        - tf.math.reduce_min(z, 1, keepdims=True)\n",
-    "    )\n",
-    "    f_logtanh = lambda x: tf.math.log(tf.exp(1.0) + tf.abs(x)) * tf.tanh(x)\n",
-    "    n = int(math.log2(input_width))\n",
-    "    k_size = 3\n",
-    "    sample_width = min(4, input_width)\n",
-    "    inputs = Input(shape=(input_width,))\n",
-    "    x = inputs\n",
-    "    u = Lambda(lambda z: z[:, -sample_width:])(x)\n",
-    "    u = Dense(n)(u)\n",
-    "    u = Reshape((-1, 1))(u)\n",
-    "    x = [Lambda(lambda z: z[:, -(2 ** (i + 1)) :])(x) for i in range(n)]\n",
-    "    means = [Lambda(f_mean, name=f\"mean{i}\")(x[i]) for i in range(n)]\n",
-    "    m = Concatenate(1, name=f\"concat_means\")(means)\n",
-    "    m = Reshape((-1, 1))(m)\n",
-    "    stds = [Lambda(f_std, name=f\"std{i}\")(x[i]) for i in range(n)]\n",
-    "    s = Concatenate(1, name=f\"concat_stds\")(stds)\n",
-    "    s = Reshape((-1, 1))(s)\n",
-    "    filters = 64\n",
-    "    for i in range(3):\n",
-    "        m = Conv1D(filters, k_size, padding=\"valid\", kernel_initializer=kernel_init)(m)\n",
-    "        m = Lambda(f_logtanh)(m)\n",
-    "        s = Conv1D(filters, k_size, padding=\"valid\", kernel_initializer=kernel_init)(s)\n",
-    "        s = Lambda(tf.nn.sigmoid)(s)\n",
-    "        u = Conv1D(filters, k_size, padding=\"valid\", kernel_initializer=kernel_init)(u)\n",
-    "        u = Lambda(f_logtanh)(u)\n",
-    "    y = Concatenate(axis=-2)([s, m, u])\n",
-    "    x = Attention()([y, y])\n",
-    "    x = Flatten()(x)\n",
-    "    # x = LayerNormalization()(x)\n",
-    "    x = BatchNormalization()(x)\n",
-    "    rows_count = 8\n",
-    "    units = 8\n",
-    "    z = [Dense(units, name=f\"d-in{k}-{0}\")(x) for k in range(columns_count)]\n",
-    "    for c in range(columns_count):\n",
-    "        for r in range(rows_count - 1):\n",
-    "            z[c] = Dense(units, name=f\"d{c}-{r}\")(z[c])\n",
-    "            z[c] = Lambda(f_logtanh)(z[c])\n",
-    "        z[c] = Dense(out_width)(z[c])\n",
-    "    x = Concatenate()(z)\n",
+    "def ConvAdaptiveKernelSize(x, activation, filters=8, kernel_size=2, dropout=0.5):\n",
+    "    k_size = kernel_size if x.shape[-2] >= kernel_size else x.shape[-2]\n",
+    "    l2 = keras.regularizers.l2(1e-10)\n",
+    "    x = Conv1D(filters, k_size, padding=\"valid\")(x)\n",
+    "    x = LayerNormalization()(x)\n",
+    "    # x = BatchNormalization()(x)\n",
+    "    x = Lambda(activation)(x)\n",
     "    # x = Dropout(rate=dropout)(x)\n",
-    "    x = Dense(out_width)(x)\n",
-    "    outputs = x\n",
-    "    model = keras.Model(inputs, outputs, name=name)\n",
-    "    MAE = keras.metrics.MeanAbsoluteError()\n",
-    "    CMSE = ClippedMSE(min_v, max_v)\n",
-    "    CMAE = ClippedMAE(min_v, max_v)\n",
-    "    model.compile(\n",
-    "        # loss=keras.losses.Huber(),\n",
-    "        # loss=keras.losses.MeanSquaredError(),\n",
-    "        loss=CMSE,\n",
-    "        optimizer=keras.optimizers.Adam(learning_rate=lr),\n",
-    "        metrics=[MAE],\n",
-    "    )\n",
-    "    return model\n",
+    "    return x\n",
     "\n",
-    "def transformer_encoder(inputs, head_size, num_heads, ff_dim, dropout=0):\n",
-    "    # Attention and Normalization\n",
-    "    x = MultiHeadAttention(key_dim=head_size, num_heads=num_heads, dropout=dropout)(\n",
-    "        inputs, inputs\n",
-    "    )\n",
-    "    x = Dropout(dropout)(x)\n",
-    "    x = LayerNormalization(epsilon=1e-8)(x)\n",
-    "    res = x + inputs\n",
-    "\n",
-    "    # Feed Forward Part\n",
-    "    x = Conv1D(filters=ff_dim, kernel_size=1, activation=\"relu\")(res)\n",
-    "    x = Dropout(dropout)(x)\n",
-    "    x = Conv1D(filters=inputs.shape[-1], kernel_size=1)(x)\n",
-    "    x = LayerNormalization(epsilon=1e-8)(x)\n",
-    "    return x + res\n",
-    "\n",
-    "\n",
-    "def mh_att(\n",
+    "def red(\n",
     "    input_width,\n",
     "    out_width,\n",
-    "    columns_count=16,\n",
-    "    lr=1e-4,\n",
+    "    columns=16,\n",
+    "    lr=1e-2,\n",
     "    min_v=-2,\n",
     "    max_v=2,\n",
     "    training=True,\n",
-    "    name=\"dense-att\",\n",
+    "    name=\"red\",\n",
     "):\n",
     "    if training:\n",
-    "        dropout = 1.0 / 64\n",
+    "        dropout = 1.0 / 256.0\n",
     "    else:\n",
     "        dropout = 0\n",
     "\n",
-    "    init_scale = 2 ** 8\n",
-    "    kern_init = keras.initializers.RandomUniform(-init_scale, init_scale)\n",
-    "    kern_reg = keras.regularizers.L2(l2=1e-10)\n",
-    "    # l2 = keras.regularizers.l2(1e-10)\n",
-    "    f_std = lambda z: tf.math.reduce_std(z, 1, keepdims=True)\n",
-    "    f_mean = lambda z: tf.math.reduce_mean(z, 1, keepdims=True)\n",
-    "    f_vrange = lambda z: (\n",
-    "        tf.math.reduce_max(z, 1, keepdims=True)\n",
-    "        - tf.math.reduce_min(z, 1, keepdims=True)\n",
-    "    )\n",
-    "    f_logtanh = lambda x: tf.math.log(tf.exp(1.0) + tf.abs(x)) * tf.tanh(x)\n",
-    "    f_log = lambda x: tf.math.log(tf.exp(1.0) + tf.abs(x))\n",
-    "    n = int(math.log2(input_width)) + 1\n",
-    "    sample_width = 16\n",
+    "    init = keras.initializers.RandomUniform(-1024, 1024)\n",
+    "    l2 = keras.regularizers.L2(l2=1e-10)\n",
+    "    dct_length = input_width\n",
+    "    def f_mean(z): return tf.math.reduce_mean(z, 1, keepdims=True)\n",
+    "    def f_logtanh(x): return tf.math.log(tf.exp(1.0) + tf.abs(x)) * tf.tanh(x)\n",
+    "    def f_dct(x): return tf.signal.dct(x, n=dct_length, norm='ortho')\n",
+    "    # def f_dct(x): return tf.signal.mdct(\n",
+    "    # x, frame_length = 8, norm = 'ortho', pad_end = True)\n",
+    "    n = int(math.log2(input_width))\n",
+    "    filters = 32\n",
     "    inputs = Input(shape=(input_width,))\n",
-    "    x = inputs\n",
-    "    u = Lambda(lambda z: z[:, -sample_width:])(x)\n",
-    "    u = Dense(n)(u)\n",
-    "    u = Reshape((-1, 1))(u)\n",
-    "    # x = [Lambda(lambda z: z[:, -(2 ** i) :])(x) for i in range(n)]\n",
-    "    # means = [Lambda(f_mean, name=f\"mean{i}\")(x[i]) for i in range(n)]\n",
-    "    # m = Concatenate(1, name=f\"concat_means\")(means)\n",
-    "    # m = Reshape((-1, 1))(m)\n",
-    "    # stds = [Lambda(f_std, name=f\"std{i}\")(x[i]) for i in range(n)]\n",
-    "    # s = Concatenate(1, name=f\"concat_stds\")(stds)\n",
-    "    # s = Reshape((-1, 1))(s)\n",
-    "    # y = Concatenate(axis=-2)([s, m, u])\n",
-    "    filters = 64\n",
-    "    head_size = 16\n",
-    "    num_heads = 32\n",
-    "    y = u\n",
-    "    for i in range(8):\n",
-    "        y = transformer_encoder(y, head_size, num_heads, filters, dropout)\n",
-    "    x = Flatten()(y)\n",
-    "    rows_count = 4\n",
-    "    units = 16\n",
-    "    z = [Dense(units, name=f\"d-in{k}-{0}\")(x) for k in range(columns_count)]\n",
-    "    res = z\n",
-    "    for c in range(columns_count):\n",
+    "    # key = [Lambda(lambda z: z[:, -(2 ** (i+1)) :])(inputs) for i in range(n)]\n",
+    "    # m = [Lambda(f_mean, name=f\"mean{i}\")(key[i]) for i in range(n)]\n",
+    "    # m = Concatenate(name=f\"concat_means\")(m)\n",
+    "    # m = Dense(filters)(m)\n",
+    "    # m = Reshape((1, -1))(m)\n",
+    "    f = Lambda(f_dct, name=f\"dct\")(inputs)\n",
+    "    f = Reshape((-1, 1))(f)\n",
+    "    while f.shape[-2] > 1:\n",
+    "        f = ConvAdaptiveKernelSize(f, tf.nn.tanh, filters, 16, dropout)\n",
+    "    # f = Dropout(rate=dropout)(f)\n",
+    "    # x = Multiply()([m, f])\n",
+    "    # x = Flatten()(f)\n",
+    "    # x = Dense(64)(x)\n",
+    "    x = Reshape((-1, 1))(f)\n",
+    "    x = LSTM(64, return_sequences=True, dropout=dropout)(x)\n",
+    "    x = Flatten()(x)\n",
+    "    x = Dense(32)(x)\n",
+    "    rows_count = 8\n",
+    "    units = 32\n",
+    "    z = [Dense(units, name=f\"d-in{c}-{0}\")(x) for c in range(columns)]\n",
+    "    z = [Lambda(f_logtanh)(z[c]) for c in range(columns)]\n",
+    "    for c in range(columns):\n",
     "        for r in range(rows_count - 1):\n",
     "            z[c] = Dense(units, name=f\"d{c}-{r}\")(z[c])\n",
+    "            z[c] = BatchNormalization()(z[c])\n",
     "            z[c] = Lambda(f_logtanh)(z[c])\n",
     "        z[c] = Dense(out_width)(z[c])\n",
+    "        # z[c] = Lambda(f_logtanh)(z[c])\n",
     "    x = Concatenate()(z)\n",
-    "    x = Dropout(rate=dropout)(x)\n",
-    "    # x = Dropout(rate=dropout)(x)\n",
     "    x = Dense(out_width)(x)\n",
+    "    # x = Lambda(f_logtanh)(x)\n",
     "    outputs = x\n",
     "    model = keras.Model(inputs, outputs, name=name)\n",
     "    MAE = keras.metrics.MeanAbsoluteError()\n",
@@ -412,13 +333,26 @@
     "    )\n",
     "    return model\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Predictor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPredictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     def __init__(\n\u001b[1;32m      3\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36mPredictor\u001b[0;34m()\u001b[0m\n\u001b[1;32m    172\u001b[0m     )\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     predictor = Predictor(\n\u001b[0m\u001b[1;32m    175\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"datas/EURUSD_H1.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Predictor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class Predictor(object):\n",
     "    def __init__(\n",
@@ -575,26 +509,13 @@
     "            results.append(output)\n",
     "        return results\n",
     "\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'Predictor' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPredictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     def __init__(\n\u001b[1;32m      3\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36mPredictor\u001b[0;34m()\u001b[0m\n\u001b[1;32m    172\u001b[0m     )\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     predictor = Predictor(\n\u001b[0m\u001b[1;32m    175\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"datas/EURUSD_H1.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Predictor' is not defined"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "batch_size = 2 ** 10\n",
     "dataset_segment = 1.0 / 8.0\n",
@@ -640,32 +561,30 @@
     "    predictor.save_model()\n",
     "    # perfomance = predictor.evaluate()\n",
     "    print(\"Модель обновлена\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.9 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.6.9",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit"
-  },
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
