server.py bugfix, mql refactor

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-27 21:52:23.061786: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2021-12-27 21:52:23.061819: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import math\n",
@@ -66,17 +75,7 @@
     "                \"tickvol\": np.float32,\n",
     "                \"vol\": np.float32,\n",
     "            },\n",
-    "            names=[\n",
-    "                \"date\",\n",
-    "                \"time\",\n",
-    "                \"open\",\n",
-    "                \"high\",\n",
-    "                \"low\",\n",
-    "                \"close\",\n",
-    "                \"tickvol\",\n",
-    "                \"vol\",\n",
-    "                \"spread\",\n",
-    "            ],\n",
+    "            names=[\"date\",\"time\",\"open\",\"high\",\"low\",\"close\",\"tickvol\",\"vol\",\"spread\",],\n",
     "        )\n",
     "        df_size = df[input_column].size\n",
     "        train_size = int(df_size * train_ratio)\n",
@@ -236,13 +235,7 @@
     "\n",
     "\n",
     "class ClippedMAE(losses.Loss):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        value_min=-1.0,\n",
-    "        value_max=1.0,\n",
-    "        reduction=losses.Reduction.AUTO,\n",
-    "        name=\"clipped_mae\",\n",
-    "    ) -> None:\n",
+    "    def __init__(self, value_min=-1.0, value_max=1.0, reduction=losses.Reduction.AUTO, name=\"clipped_mae\") -> None:\n",
     "        super().__init__(reduction=reduction, name=name)\n",
     "        self.value_min = value_min\n",
     "        self.value_max = value_max\n",
@@ -262,29 +255,15 @@
     "    # x = Dropout(rate=dropout)(x)\n",
     "    return x\n",
     "\n",
-    "def red(\n",
-    "    input_width,\n",
-    "    out_width,\n",
-    "    columns=16,\n",
-    "    lr=1e-2,\n",
-    "    min_v=-2,\n",
-    "    max_v=2,\n",
-    "    training=True,\n",
-    "    name=\"red\",\n",
-    "):\n",
-    "    if training:\n",
-    "        dropout = 1.0 / 256.0\n",
-    "    else:\n",
-    "        dropout = 0\n",
     "\n",
+    "def red(input_width, out_width, columns=16, lr=1e-2, min_v=-2, max_v=2, training=True, name=\"red\"):\n",
+    "    dropout = 1.0 / 256 if training else 0\n",
     "    init = keras.initializers.RandomUniform(-1024, 1024)\n",
     "    l2 = keras.regularizers.L2(l2=1e-10)\n",
     "    dct_length = input_width\n",
     "    def f_mean(z): return tf.math.reduce_mean(z, 1, keepdims=True)\n",
     "    def f_logtanh(x): return tf.math.log(tf.exp(1.0) + tf.abs(x)) * tf.tanh(x)\n",
     "    def f_dct(x): return tf.signal.dct(x, n=dct_length, norm='ortho')\n",
-    "    # def f_dct(x): return tf.signal.mdct(\n",
-    "    # x, frame_length = 8, norm = 'ortho', pad_end = True)\n",
     "    n = int(math.log2(input_width))\n",
     "    filters = 32\n",
     "    inputs = Input(shape=(input_width,))\n",
@@ -297,10 +276,6 @@
     "    f = Reshape((-1, 1))(f)\n",
     "    while f.shape[-2] > 1:\n",
     "        f = ConvAdaptiveKernelSize(f, tf.nn.tanh, filters, 16, dropout)\n",
-    "    # f = Dropout(rate=dropout)(f)\n",
-    "    # x = Multiply()([m, f])\n",
-    "    # x = Flatten()(f)\n",
-    "    # x = Dense(64)(x)\n",
     "    x = Reshape((-1, 1))(f)\n",
     "    x = LSTM(64, return_sequences=True, dropout=dropout)(x)\n",
     "    x = Flatten()(x)\n",
@@ -318,41 +293,24 @@
     "        # z[c] = Lambda(f_logtanh)(z[c])\n",
     "    x = Concatenate()(z)\n",
     "    x = Dense(out_width)(x)\n",
-    "    # x = Lambda(f_logtanh)(x)\n",
     "    outputs = x\n",
     "    model = keras.Model(inputs, outputs, name=name)\n",
     "    MAE = keras.metrics.MeanAbsoluteError()\n",
     "    CMSE = ClippedMSE(min_v, max_v)\n",
     "    CMAE = ClippedMAE(min_v, max_v)\n",
     "    model.compile(\n",
-    "        # loss=keras.losses.Huber(),\n",
-    "        # loss=keras.losses.MeanSquaredError(),\n",
     "        loss=CMSE,\n",
     "        optimizer=keras.optimizers.Adam(learning_rate=lr),\n",
     "        metrics=[MAE],\n",
     "    )\n",
-    "    return model\n",
-    "\n"
+    "    return model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Predictor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPredictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     def __init__(\n\u001b[1;32m      3\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-fdd20ae23806>\u001b[0m in \u001b[0;36mPredictor\u001b[0;34m()\u001b[0m\n\u001b[1;32m    172\u001b[0m     )\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     predictor = Predictor(\n\u001b[0m\u001b[1;32m    175\u001b[0m         \u001b[0mdatafile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"datas/EURUSD_H1.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Predictor' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Predictor(object):\n",
     "    def __init__(\n",
@@ -523,11 +481,11 @@
     "label_width = 1\n",
     "columns = 64\n",
     "\n",
-    "model = mh_att(\n",
+    "model = red(\n",
     "    input_width,\n",
     "    label_width,\n",
     "    columns_count=columns,\n",
-    "    lr=1e-6,\n",
+    "    lr=1e-4,\n",
     "    min_v=-2.0,\n",
     "    max_v=2.0,\n",
     "    training=True,\n",
@@ -545,7 +503,7 @@
     "    batch_size=batch_size,\n",
     ")\n",
     "\n",
-    "predictor.plot()\n",
+    "# predictor.plot()\n",
     "# predictor.model.summary()\n",
     "\n",
     "i = 0\n",
@@ -582,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
