--- a/test/tests2.ipynb
+++ b/test/tests2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,13 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Инструкия: https://github.com/lucas-campagna/mt5linux\n",
     "from mt5linux import MetaTrader5\n",
     "# connecto to the server\n",
     "mt5 = MetaTrader5(\n",
