--- a/train.ipynb
+++ b/train.ipynb
@@ -256,14 +256,29 @@
     "    return x\n",
     "\n",
     "\n",
-    "def red(input_width, out_width, columns=16, lr=1e-2, min_v=-2, max_v=2, training=True, name=\"red\"):\n",
-    "    dropout = 1.0 / 256 if training else 0\n",
+    "def red(\n",
+    "    input_width,\n",
+    "    out_width,\n",
+    "    columns=16,\n",
+    "    lr=1e-2,\n",
+    "    min_v=-2,\n",
+    "    max_v=2,\n",
+    "    training=True,\n",
+    "    name=\"red\",\n",
+    "):\n",
+    "    if training:\n",
+    "        dropout = 1.0 / 256.0\n",
+    "    else:\n",
+    "        dropout = 0\n",
+    "\n",
     "    init = keras.initializers.RandomUniform(-1024, 1024)\n",
     "    l2 = keras.regularizers.L2(l2=1e-10)\n",
     "    dct_length = input_width\n",
     "    def f_mean(z): return tf.math.reduce_mean(z, 1, keepdims=True)\n",
     "    def f_logtanh(x): return tf.math.log(tf.exp(1.0) + tf.abs(x)) * tf.tanh(x)\n",
     "    def f_dct(x): return tf.signal.dct(x, n=dct_length, norm='ortho')\n",
+    "    # def f_dct(x): return tf.signal.mdct(\n",
+    "    # x, frame_length = 8, norm = 'ortho', pad_end = True)\n",
     "    n = int(math.log2(input_width))\n",
     "    filters = 32\n",
     "    inputs = Input(shape=(input_width,))\n",
@@ -276,10 +291,14 @@
     "    f = Reshape((-1, 1))(f)\n",
     "    while f.shape[-2] > 1:\n",
     "        f = ConvAdaptiveKernelSize(f, tf.nn.tanh, filters, 16, dropout)\n",
+    "    # f = Dropout(rate=dropout)(f)\n",
+    "    # x = Multiply()([m, f])\n",
+    "    # x = Flatten()(f)\n",
+    "    # x = Dense(64)(x)\n",
     "    x = Reshape((-1, 1))(f)\n",
-    "    x = LSTM(64, return_sequences=True, dropout=dropout)(x)\n",
+    "    x = LSTM(64, return_sequences=True, dropout=dropout, name=\"lstm-1\")(x)\n",
     "    x = Flatten()(x)\n",
-    "    x = Dense(32)(x)\n",
+    "    x = Dense(32, name=f\"d-in-0\")(x)\n",
     "    rows_count = 8\n",
     "    units = 32\n",
     "    z = [Dense(units, name=f\"d-in{c}-{0}\")(x) for c in range(columns)]\n",
@@ -287,18 +306,21 @@
     "    for c in range(columns):\n",
     "        for r in range(rows_count - 1):\n",
     "            z[c] = Dense(units, name=f\"d{c}-{r}\")(z[c])\n",
-    "            z[c] = BatchNormalization()(z[c])\n",
+    "            z[c] = BatchNormalization()(z[c])g\n",
     "            z[c] = Lambda(f_logtanh)(z[c])\n",
     "        z[c] = Dense(out_width)(z[c])\n",
     "        # z[c] = Lambda(f_logtanh)(z[c])\n",
     "    x = Concatenate()(z)\n",
     "    x = Dense(out_width)(x)\n",
+    "    # x = Lambda(f_logtanh)(x)\n",
     "    outputs = x\n",
     "    model = keras.Model(inputs, outputs, name=name)\n",
     "    MAE = keras.metrics.MeanAbsoluteError()\n",
     "    CMSE = ClippedMSE(min_v, max_v)\n",
     "    CMAE = ClippedMAE(min_v, max_v)\n",
     "    model.compile(\n",
+    "        # loss=keras.losses.Huber(),\n",
+    "        # loss=keras.losses.MeanSquaredError(),\n",
     "        loss=CMSE,\n",
     "        optimizer=keras.optimizers.Adam(learning_rate=lr),\n",
     "        metrics=[MAE],\n",
